--- a/indexseven.html
+++ b/indexseven.html
@@ -3,21 +3,12 @@
     <title>Uncle Ronnie's</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/styleseven.css"/>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="assets/script.js"></script>
   </head>
 <body>
 
-  <div id = "sidebar-button">
-      <a id="nav-toggle">
-          <span></span>
-      </a>
-  </div>
-
-  <div id="background">
-    <div id="background-overlay"></div>
-  </div>
 
   <nav id="main-menu">
        <ul class="nav-bar">
@@ -29,14 +20,16 @@
             <img src="assets/img/starsthree.png" alt="stars" height="30" width="30">
             <li class="nav-button-testimonies"><a href="indexsix.html">Testimonies</a></li>
             <img src="assets/img/starsfour.png" alt="stars" height="30" width="30">
-            <li class="nav-button-contact"><a href="indextwo.html">Contact</a></li>
+            <li class="nav-button-contact"><a href="indexseven.html">Contact</a></li>
        </ul>
   </nav>
 
-  <div id="pageone">
-    <img src="assets/img/URH.jpg" alt="urh">
+  <div class="info-container">
+    <h2 class="info"> Join our home!</h2>
+      <h3>Email: ronaldrl@gmail.com<br>Phone: (312) 286-6031<br><a href="https://www.facebook.com/Uncle-Ronnie-1518199918444135/?fref=ts">Facebook</a></br></h3>
   </div>
 
-
-</body>
-</html>
+  <div class="pic-container">
+    <div class="bottom">
+      <img src="assets/img/chiflag.jpg" alt"bottom">
+  </div>
