--- a/indexthree.html
+++ b/indexthree.html
@@ -3,20 +3,15 @@
     <title>Uncle Ronnie's</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/stylethree.css"/>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="assets/script.js"></script>
   </head>
 <body>
 
-  <div id = "sidebar-button">
-      <a id="nav-toggle">
-          <span></span>
-      </a>
-  </div>
 
-  <div id="background">
-    <div id="background-overlay"></div>
+  <div id="backgroundthree">
+    <div id="backgroundthree-overlay"></div>
   </div>
 
   <nav id="main-menu">
@@ -33,9 +28,18 @@
        </ul>
   </nav>
 
-  <div id="pageone">
-    <img src="assets/img/URH.jpg" alt="urh">
-  </div>
+  <div class="section-container">
+    <div class="photo-container">
+      <img src="assets/img/08.jpg">
+    </div>
+    <div class="description-container">
+      <h1 class="title">Ronald Taylor</h1>
+      <p>"Uncle Ronnie's is a progressive international house that houses students from all over the world. Unlike most other
+        homestays, our homestay is located in the inner city area of Chicago, giving students an opportunity to interact with
+        people from 6 to 7 different countries at a time as well as locals. Finally, Uncle Ronnie's is about family,
+        because people that stay at Uncle Ronnie's become family not just to local students or those who live in the house,
+        but those who have moved back to their countries as well, forming bonds across cultures."</p>
+    </div>
 
 
 </body>
