--- a/indexfour.html
+++ b/indexfour.html
@@ -3,21 +3,13 @@
     <title>Uncle Ronnie's</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/stylefour.css"/>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="assets/script.js"></script>
   </head>
 <body>
 
-  <div id = "sidebar-button">
-      <a id="nav-toggle">
-          <span></span>
-      </a>
-  </div>
 
-  <div id="background">
-    <div id="background-overlay"></div>
-  </div>
 
   <nav id="main-menu">
        <ul class="nav-bar">
@@ -33,8 +25,27 @@
        </ul>
   </nav>
 
-  <div id="pageone">
-    <img src="assets/img/URH.jpg" alt="urh">
+  <div class="map">
+    <img src="assets/img/map.png" alt="map">
+    <h1> 4834 S Forrestville
+         Chicago, IL 60615 </h1>
+  </div>
+
+  <div class="cta">
+    <img src="assets/img/greenline.jpg" alt="cta">
+    <h2> 10 minute walk to 47th Green Line</h2>
+    <h3> 5 minute walk to bus station</h3>
+  </div>
+
+  <div class="ct">
+    <img src="assets/img/IMG_6726.jpg" alt="ct">
+    <h4> 15 minute train ride away from downtown Chicago</h4>
+  </div>
+
+  <div class="info">
+    <h5> Room: single or double</h5>
+    <h6> Price: $650-$800 a month</h6>
+    <h7> Amenities: eletricity, wireless internet,<br> meals (breakfast and dinner),<br> washing machine, and drier</br></h7>
   </div>
 
 
