--- a/indexfive.html
+++ b/indexfive.html
@@ -26,66 +26,119 @@
   </nav>
 
   <div class="page-container">
+    <div id="modal-container">
+      <div id = "modal-overlay"></div>
+      <div id="carousel-prev">
+          <img class="img-scaled" src="assets/img/arrowleft.png" />
+      </div>
+      <div id="carousel-next">
+          <img class="img-scaled" src="assets/img/arrowright.png" />
+      </div>
+  			<div id="modal-box">
+          <img src="" id="modal-img">
+  			</div>
+  	</div>
+
+
+        <div class="gallery-pic-container">
+          <img src="assets/img/01.jpg" alt="one" width="300" height="200" class = "img" id = "img01">
+        </div>
+
+
       <div class="gallery-pic-container">
-        <img src="assets/img/1.jpg" alt="one" width="300" height="200">
-  </div>
-
-    <div class="gallery-pic-container">
-      <img src="assets/img/2.jpg" alt="one" width="300" height="200">
-  </div>
-
-    <div class="gallery-pic-container">
-      <img src="assets/img/3.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/4.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/5.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/6.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/14.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/17.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/20.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/10.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/13.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/15.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/12.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/16.jpg" alt="one" width="300" height="200">
-</div>
-
-  <div class="gallery-pic-container">
-    <img src="assets/img/18.jpg" alt="one" width="300" height="200">
-</div>
+      <img src="assets/img/02.jpg" alt="one" width="300" height="200" class = "img" id = "img02">
+    </div>
 
 
-</body>
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/03.jpg" alt="one" width="300" height="200" class = "img" id = "img03">
+    </div>
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/04.jpg" alt="one" width="300" height="200" class = "img" id = "img04">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/05.jpg" alt="one" width="300" height="200" class = "img" id = "img05">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/06.jpg" alt="one" width="300" height="200" class = "img" id = "img06">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/07.jpg" alt="one" width="300" height="200" class = "img" id = "img07">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/08.jpg" alt="one" width="300" height="200" class = "img" id = "img08">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/09.jpg" alt="one" width="300" height="200" class = "img" id = "img09">
+    </div>
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/10.jpg" alt="one" width="300" height="200" class = "img" id = "img10">
+    </div>
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/11.jpg" alt="one" width="300" height="200" class = "img" id = "img11">
+    </div>
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/12.jpg" alt="one" width="300" height="200" class = "img" id = "img12">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/13.jpg" alt="one" width="300" height="200" class = "img" id = "img13">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/14.jpg" alt="one" width="300" height="200" class = "img" id = "img14">
+    </div>
+
+
+
+
+      <div class="gallery-pic-container">
+      <img src="assets/img/15.jpg" alt="one" width="300" height="200" class = "img" id = "img15">
+    </div>
+<div class = "clear"></div>
+
+
+
+    </body>
+
 </html>
