fixed pics issue

--- a/indexfour.html
+++ b/indexfour.html
@@ -38,7 +38,7 @@
   </div>
 
   <div class="ct">
-    <img src="assets/img/IMG_6726.jpg" alt="ct">
+    <img src="assets/img/IMG_6726.JPG" alt="ct">
     <h4> 15 minute train ride away from downtown Chicago</h4>
   </div>
 
